<resources>
    <string name="app_name">Green_Leaf</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="splash_screen_button_string">Click To Begin</string>
    <string name="title_activity_green_leaf_introduction">GreenLeafIntroductionActivity</string>
    <string name="welcome_green_leaf_heading">/ Welcome to Green Leaf</string>
    <string name="welcome_green_leaf_sub_heading">/ Sub Heading</string>
    <string name="sample_description">All computers contain a central processing unit that interprets and executes instructions; input devices, such as a keyboard and a mouse, through which data and commands enter the computer.</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <string name="login_home_screen">Login</string>
    <string name="register_home_screen">Register</string>
    <string name="title_activity_login_screen">LoginScreenActivity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="return_string_login">Return</string>
    <string name="title_activity_register_screen">RegisterScreenActivity</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Organisation">Organisation</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_profile_screen">ProfileScreenActivity</string>
    <string name="lets_go">Let\'s Go!</string>
    <string name="week_panel_description">Your Schedule for Week Beginning</string>
    <string name="week_panel_date">[xx/xx/xxxx]</string>
    <string name="modify">Modify</string>
    <string name="explore">Explore</string>
    <string name="user_leaves_panel_title">Your Leaves</string>
    <string name="user_information_panel_title">Information</string>
    <string name="user_information_panel_description">View and modify your information and other details on your Green Leaf profile</string>
    <string name="title_activity_week_preference_screen">WeekPreferenceScreen</string>
    <string name="welcome">/ Let Us Know!</string>
    <string name="Leaderboard">/ Leaderboard</string>
    <string name="week_preference_instruction">Let the kitchen know when you will be needing to eat the pre prepared meals.</string>
    <string name="confirm_days">Confirm Days</string>
    <string name="multiply_sign">X</string>
    <string name="title_activity_leaderboard_screen">LeaderboardScreen</string>
    <string name="information_title">/ Information</string>
    <string name="personal_information">Personal Information</string>
    <string name="edit">Edit</string>
    <string name="security">Security</string>
    <string name="current_password">/ Current Password</string>
    <string name="new_password">/ New Password</string>
    <string name="confirm_new_password">/ Confirm New Password</string>
    <string name="qr_code_title">Sign Yourself In</string>
    <string name="qr_code_heading">Scan the QR code while having your Meal to gain bonus Leaves!</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="current_leaves">Current Leaves</string>
    <string name="total_leaves">Total Leaves</string>
    <string name="current_plants">Current Plants</string>
    <string name="leaderboard_info">Want to know how you compare to others? Check out how many leaves you have collected overall and be the top of the leaderboard!</string>
    <string name="redeem">Redeem Your Plants</string>
    <string name="redeem_info">Redeem your hard-earned plants for fantastic gifts to make your life more sustainable</string>
    <string name="redeem_now">Redeem Now</string>
    <string name="title_activity_redeem_screen">RedeemScreenActivity</string>
    <string name="redeem_title">/ Redeem Your Plants</string>
    <string name="keepcup">KeepCup</string>
    <string name="keep_cup_info">/ The Worlds First Barista Standard 16oz Large Reusable Cup</string>
    <string name="toothbrush_info">/ This Family Pack of 4 Charcoal Teeth Whitening Toothbrushes contains 4 high quality, durable and environmentally friendly toothbrush that will get your teeth clean, restore brightness and make gums healthy without bringing any harm to the environment - unlike plastic toothbrushes.</string>
    <string name="chillys_redeem">/ The Chilly\'s Bottle keeps your drink warm for 12 hours and cool for 24 hours. It helps you stay hydrated and healthy in any environment your adventures take you.</string>
    <string name="heading_1">/ What is Green Leaf?</string>
    <string name="heading_2">/ How does it work?</string>
    <string name="heading_3">/ Why we need Green Leaf?</string>
    <string name="heading_4">/ Where is Green Leaf Used?</string>
    <string name="description_1">What is Green Leaf? Green Leaf is an app to help encourage sustainable behaviour within your organisation or institution</string>
    <string name="description_2">How does it work? Green Leaf rewards user’s for letting their organisation or institution know when they will be needing lunch! Every time you submit your details for the new week ahead you will be rewarded with leaves. Collect 20 leaves and you will get a plant, and with these plants you can redeem them for amazing rewards!</string>
    <string name="description_3">Why do we need Green Leaf? With today’s society focusing on being more sustainable, it is essential that we try reduce one of the major threats that is food wastage. With Green Leaf our goal is to only prepare what we need. Not a crumb more!</string>
    <string name="description_4">Where is Green Leaf used? Green Leaf is used wherever you have meals prepared for yourself and others. Can be at your school, University halls and even your place of work. Let us know when you and are not in, then we will be able to meet our goal of creating a more sustainable environment</string>
</resources>
