<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginScreenActivity"
    android:layout_gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="50dp">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp">

            <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/circle_fine" />

            <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@mipmap/green_leaf" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:background="@drawable/content_box"
            android:paddingLeft="30dp"
            android:paddingTop="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/first_name"
                    android:textStyle="bold"
                    android:textSize="18dp"/>

                <EditText
                    android:id="@+id/first_name_input"
                    android:inputType="textPersonName"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/text_box"
                    android:imeOptions="actionNext"
                    android:paddingLeft="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/last_name"
                    android:textStyle="bold"
                    android:textSize="18dp"/>

                <EditText
                    android:id="@+id/last_name_input"
                    android:inputType="textPersonName"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/text_box"
                    android:imeOptions="actionNext"
                    android:paddingLeft="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/email"
                    android:textStyle="bold"
                    android:textSize="18dp"/>

                <EditText
                    android:id="@+id/email_input"
                    android:inputType="textEmailAddress"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/text_box"
                    android:imeOptions="actionNext"
                    android:paddingLeft="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/Organisation"
                    android:textStyle="bold"
                    android:textSize="18dp"/>

                <EditText
                    android:id="@+id/organisation_input"
                    android:inputType="textPersonName"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/text_box"
                    android:imeOptions="actionNext"
                    android:paddingLeft="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/password"
                    android:textStyle="bold"
                    android:textSize="18dp"/>

                <EditText
                    android:id="@+id/password_input"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/text_box"
                    android:inputType="textPassword"
                    android:imeOptions="actionNext"
                    android:paddingLeft="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/confirm_password"
                    android:textStyle="bold"
                    android:textSize="18dp"/>

                <EditText
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/text_box"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:paddingLeft="10dp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <Button
                android:id="@+id/register_confirm"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/button"
                android:text="@string/register_home_screen" />

            <Button
                android:id="@+id/cancel_registration"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="@drawable/button"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>