<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginScreenActivity"
    android:layout_gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="50dp">
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp">
            <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/circle_fine"/>
            <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@mipmap/green_leaf"/>
        </FrameLayout>
        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:background="@drawable/content_box"
            android:paddingTop="30dp"
            android:paddingLeft="30dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    android:layout_marginBottom="5dp"/>
                <EditText
                    android:id="@+id/login_email_input"
                    android:inputType="textEmailAddress"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_box"
                    android:layout_marginBottom="30dp"
                    android:paddingLeft="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    android:layout_marginBottom="5dp"/>
                <EditText
                    android:id="@+id/login_password_input"
                    android:inputType="textPassword"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_box"
                    android:layout_marginBottom="30dp"
                    android:paddingLeft="10dp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp">
            <Button
                android:id="@+id/login_button"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="@drawable/button"
                android:text="@string/login_home_screen"
                android:layout_marginRight="30dp"/>
            <Button
                android:id="@+id/register_button"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="@drawable/button"
                android:text="@string/register_home_screen"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>