<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/top_content_leaderboard_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="25dp"
        android:paddingTop="@dimen/heading_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Leaderboard"
            android:textSize="@dimen/heading_text" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_marginTop="10dp"
            android:src="@mipmap/stampsheet_leaves20" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/circle_fine"
                android:src="@mipmap/green_leaf" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/multiply_sign"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/number_leaves_plant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="20"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@drawable/recycler_heading">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:text="Leaderboard"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:textSize="20dp"/>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button
            android:id="@+id/return_to_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/recycler_return_button"
            android:text="@string/return_string_login"
            android:textSize="18sp"
            android:textColor="@color/darkestGreen" />
    </RelativeLayout>


</LinearLayout>