<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="70dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/information_title"
            android:textSize="@dimen/heading_text"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/content_panel"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/personal_information"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="22sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="/ Name"
                    android:textStyle="bold"
                    android:textColor="@color/darkestGreen"
                    android:paddingRight="30dp"
                    android:textSize="18sp"/>

                <EditText
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:paddingRight="30dp"
                    android:text="/ User's Name"
                    android:textSize="18sp" />
                <Button
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:background="@drawable/button_grey"
                    android:text="@string/edit"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="/ Email"
                    android:textStyle="bold"
                    android:textColor="@color/darkestGreen"
                    android:paddingRight="30dp"
                    android:textSize="18sp"/>
                <EditText
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:text="/ User's Email"
                    android:textSize="18sp"
                    android:paddingRight="30dp"/>
                <Button
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:background="@drawable/button_grey"
                    android:text="@string/edit"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="/ TBD"
                    android:textStyle="bold"
                    android:textColor="@color/darkestGreen"
                    android:paddingRight="30dp"
                    android:textSize="18sp"/>
                <EditText
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:text="/ TBD"
                    android:textSize="18sp"
                    android:paddingRight="30dp"/>
                <Button
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:background="@drawable/button_grey"
                    android:text="@string/edit"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/button_lets_go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/lets_go"/>


    </LinearLayout>


</ScrollView>